# data_eng_pipeline_electricity_meteo_geo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  airflow-entrypoint.sh  airflow.Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
airflow/: Dockerfile
airflow/dags/: dataset_factory.py  example_dag.py
benchmarks/: benchmark_load_methods.py  benchmark_real_datasets.py  benchmark_truncate_vs_upsert.py  hash_chunk_size.py
data/: catalog.yaml
docs/: README_DATA.md  README_DATA_SOURCES.md  README_DEV.md  README_DX.md  README_TECH.md  ROADMAP.md  todo_data.md
notebooks/: 01_odre_registre_national_installations.py  03_meteo_france_info_stations.py  eco2mix.py  odre_eco2mix_cons_def.py  registre_installations_production_et_stockage_electricite.py
postgres/init/: 01_create_databases.sql  02_create_schemas.sql
postgres/tables/gold/: installations_electriques_avec_meteo.sql  installations_meteo.sql
postgres/tables/silver/: ign_contours_iris.sql  meteo_france_stations.sql  odre_eco2mix_cons_def.sql  odre_eco2mix_tr.sql
postgres/upsert/gold/: installations_meteo.sql
postgres/upsert/silver/: ign_contours_iris.sql  meteo_france_stations.sql  odre_eco2mix_cons_def.sql  odre_eco2mix_tr.sql
src/: data_catalog.yaml
src/de_projet_perso/: datacatalog.py  datacatalog_example_load.py  example.py  ign_contours_iris.py  pipeline_example.py
src/de_projet_perso/airflow/: __init__.py  adapters.py  assets.py
src/de_projet_perso/core/: __init__.py  catalog.py  data_catalog.py  downloader.py  enums.py  exception_handler.py  exceptions.py  (+7 more)
tests/: conftest.py  test_catalog.py  test_logger.py
tests/airflow/: test_adapters.py
tests/core/: test_logger.py
tests/pipeline/: test_context.py  test_results.py
tests/unit/: test_logger.py
tests/utils/: test_remote_checker.py
(+47 files in other folders)
