[project]
name = "de-projet-perso"
version = "2026.01"
description = "Data Engineering personnal project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "httpx[http2]>=0.27.0",
    "loguru>=0.7.3",
    "polars>=1.37.1",
    "psycopg[binary]>=3.3.2",
    "py7zr>=1.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.1.6", # installed for DX but actual Airflow code will be runned through Docker
    "marimo[recommended]>=0.19.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

[tool.ruff]
#src = ["src", "tests"]
line-length = 100
include = [
    "src/**/*.py",
    "tests/**/*.py"
]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "I", # isort
    "E", "W", # pycodestyle,
    "F", # pyflakes
    "PL", # pylint
    "D", # pydocstyle
    "NPY", # numpy
]
ignore = [] # "D100", "D101", "D104"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
include = ["src", "tests"]
exclude = ["notebooks"]

[tool.marimo.runtime]
pythonpath = ["src"] # needed to use absolute imports inside notebooks

[tool.pytest.ini_options]
addopts = "--cov=de_projet_perso --cov-report=term-missing --cov-report=html:tests/htmlcov"
pythonpath = ["src"]
# testpaths = ["tests"]

[tool.coverage.run]
branch = true # check if all branches of if/else statement are used
data_file = "tests/.coverage"
# source = ["de_projet_perso"]

[tool.coverage.report]
#fail_under = 90
show_missing = true
exclude_also = [
    'if __name__ == .__main__.:'
]
